fix item label align top problem

--- a/sass/_items.scss
+++ b/sass/_items.scss
@@ -262,6 +262,9 @@ button.item.item-button-right {
     left: $item-padding;
     display: block;
     width: 90px;
+    height: $line-height-computed + $font-size-base;
+    line-height: $line-height-computed + $font-size-base;
+    padding-right: 5px;
     @include translate(0, -50%);
 
     &.align-top {
